--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,6 +7,8 @@
                     <h1 class="display-1 text-center">Login</h1>
                     <p class="text-center lead">Faça login ou crie sua conta abaixo</p>
 
+                    <%- include('includes/messages'); %>
+
                     <div class="row">
                         <div class="col-lg">
                             <h4>Faça o seu cadastro</h4>
