--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -15,25 +15,25 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1">Nome: </label>
                         <input type="text" class="form-control" id="exampleInputEmail1" name="nome"
-                            placeholder="nome">
+                            placeholder="nome" value="<%= contato.nome %>">
                     </div>
 
                     <div class="form-group">
                         <label for="exampleInputEmail1">Sobrenome: </label>
                         <input type="text" class="form-control" id="exampleInputEmail1" name="sobrenome"
-                            placeholder="sobrenome">
+                            placeholder="sobrenome" value="<%= contato.sobrenome %>">
                     </div>
 
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email: </label>
                         <input type="email" class="form-control" id="exampleInputEmail1" name="email"
-                            placeholder="email">
+                            placeholder="email" value="<%= contato.email %>">
                     </div>
                     
                     <div class="form-group">
                         <label for="exampleInputEmail1">Telefone: </label>
                         <input type="tel" class="form-control" id="exampleInputEmail1" name="telefone"
-                            placeholder="telefone">
+                            placeholder="telefone" value="<%= contato.telefone %>">
                     </div>
 
                     <button type="submit" class="btn btn-primary mb-5">Salvar contato</button>
