--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -1,46 +1,52 @@
 <%- include('includes/head') %>
-<%- include('includes/nav') %>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8 my-3">
-                <h1 class="display-1 text-center">Contato</h1>
-                <p class="text-center lead">Crie ou edite seu contato abaixo</p>
+    <%- include('includes/nav') %>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 my-3">
+                    <h1 class="display-1 text-center">Contato</h1>
+                    <p class="text-center lead">Crie ou edite seu contato abaixo</p>
 
-                <%- include('includes/messages') %>
+                    <%- include('includes/messages') %>
 
-                <form action="/contato/register" method="POST">
-                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <% if(contato._id) { %>
+                            <form action="/contato/edit/<%= contato._id %>" method="POST">
+                                <% } else { %>
+                                    <form action="/contato/register" method="POST">
+                                        <% } %>
+                                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Nome: </label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" name="nome"
-                            placeholder="nome" value="<%= contato.nome %>">
-                    </div>
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail1">Nome: </label>
+                                                <input type="text" class="form-control" id="exampleInputEmail1"
+                                                    name="nome" placeholder="nome" value="<%= contato.nome %>">
+                                            </div>
 
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Sobrenome: </label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" name="sobrenome"
-                            placeholder="sobrenome" value="<%= contato.sobrenome %>">
-                    </div>
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail1">Sobrenome: </label>
+                                                <input type="text" class="form-control" id="exampleInputEmail1"
+                                                    name="sobrenome" placeholder="sobrenome"
+                                                    value="<%= contato.sobrenome %>">
+                                            </div>
 
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email: </label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" name="email"
-                            placeholder="email" value="<%= contato.email %>">
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Telefone: </label>
-                        <input type="tel" class="form-control" id="exampleInputEmail1" name="telefone"
-                            placeholder="telefone" value="<%= contato.telefone %>">
-                    </div>
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail1">Email: </label>
+                                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                                    name="email" placeholder="email" value="<%= contato.email %>">
+                                            </div>
 
-                    <button type="submit" class="btn btn-primary mb-5">Salvar contato</button>
-                </form>
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail1">Telefone: </label>
+                                                <input type="tel" class="form-control" id="exampleInputEmail1"
+                                                    name="telefone" placeholder="telefone"
+                                                    value="<%= contato.telefone %>">
+                                            </div>
 
+                                            <button type="submit" class="btn btn-primary mb-5">Salvar contato</button>
+                                    </form>
+
+                </div>
+                <div class="col-lg-2"></div>
             </div>
-            <div class="col-lg-2"></div>
         </div>
-    </div>
-<%- include('includes/footer') %>
+        <%- include('includes/footer') %>
